Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36314

REG: Mac scrollbar jumping doesn't respect system rule

XMLWordPrintable

    • macOS
    • 23595107cd2366a86cf968578ddb17b827c7a596

      Scrollbar should respect system rule of jumping to click position or just jumping to the next page. It works fine in Qt 4.8.5 but in Qt 5.2.0 scrollbar jumps always to the click position.

      Select System preferences -> General -> Jump to the next page.

      Use attached example to test scrollbar functionality. There's also workaround in the file and you can enable/disable it to test correct behavior.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bachewii Jens
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes